# Terminal

./: README.md
.github/workflows/: lector-release.yml
geogebra/: .gitignore  README.md  __init__.py  formula.py  graph.py  history.py  input_panel.py  main.py  render_pipeline.py  settings.py  terminal_io.py  ui.py
glbee/: .gitignore  Cargo.toml  README.md
glbee/src/: cli.rs  main.rs  math.rs  model.rs  protocols.rs  renderer.rs  terminal.rs
lector/: .gitignore  Cargo.toml  README.md
lector/crates/lector-servo-native/: Cargo.toml
lector/crates/lector-servo-native/src/: lib.rs
lector/docs/: servo-native.md
lector/scripts/: fetch-servo.sh  package-release.sh
lector/src/: app.rs  cli.rs  event.rs  main.rs  terminal.rs
lector/src/engine/: demo.rs  html.rs  mod.rs  servo_native.rs
lector/src/graphics/: frame.rs  mod.rs  sixel.rs
sixrs/: Cargo.toml  LICENSE-APACHE  README.md
sixrs/src/: main.rs
