[package]
name = "sixrs"
version = "0.1.3"
edition = "2024"
description = "A fast image to Sixel encoder for terminals"
license = "Apache-2.0"
readme = "README.md"
keywords = ["sixel", "terminal", "image", "cli"]
categories = ["command-line-utilities", "multimedia::images"]
include = [
    "asset/sixrs_screenshot.png",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE-APACHE",
    "README.md",
    "src/**",
]

[dependencies]
image = { version = "0.25.6", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "pnm", "tiff", "webp"] }
libc = "0.2"
